Add checkmark when on Driveshare Running
Added a class in the css that displays the checkmark button from from
fontawsome.
Added an element to the button with the previously mentioned class where
the checkmark is going to be displayed

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -101,6 +101,7 @@
                       <span class="start-label">PREPARING...</span>
                     </button>
                     <button v-if="userdata.tabs[current]._process" class="btn btn-block stop" data-style="expand-left" v-on:click="stopFarming">
+                      <i class="fa fa-check"></i>
                       <span class="start-label">DRIVESHARE IS RUNNING</span>
                     </button>
                   </div>
