--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -138,18 +138,6 @@
           <p v-if="working">Performing first time initialization. This can take up to several minutes, hang tight...</p>
           <p v-if="working">{{status}}</p>
           <p v-if="!working && error" class="error">{{error}}</p>
-          <p v-if="linux && !working && !error">Your password is required for first time setup, please input your user password:</p>
-          <form v-if="linux && !working && !error" class="row" v-on:submit="setup">
-            <div class="col-lg-4 col-lg-offset-4">
-              <div class="input-group passwd-linux">
-                <input class="form-control input-lg" type="password" placeholder="Password" autofocus v-model="password">
-              </div>
-              <br>
-              <div class="btn-group">
-                <button type="button" class="btn btn-blue passwd-linux-btn" v-on:click="setup">Submit</button>
-              </div>
-            </div>
-          </form>
           <div v-if="working" class="spinner spinner-modal">
             <div class="rect1"></div>
             <div class="rect2"></div>
@@ -160,7 +148,8 @@
         </div>
         <div v-if="error" class="modal-footer">
           <div class="btn-group">
-            <button type="button" class="btn btn-blue" data-dismiss="modal" v-on:click="reload">Try Again</button>
+            <button v-if="linux" type="button" class="btn btn-blue" v-on:click="openReleases">Download</button>
+            <button v-if="!linux" type="button" class="btn btn-blue" data-dismiss="modal" v-on:click="reload">Try Again</button>
           </div>
         </div>
       </div>
