Trying to pass in command line arguments to ethminer

--- a/app/steamminer.html
+++ b/app/steamminer.html
@@ -156,9 +156,11 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">Mining.... Do Not Close</h4>
+					<h4 class="modal-title">Do Not Close</h4>
 				</div>
-				<div class="modal-body" id="modalMineBody"><!--Contents are populated by ./modules/about.js--></div>
+				<div class="modal-body" id="modalMineBody"></script>
+					<script>require('./modules/mine.js')
+							</script>Mining...<!--Contents are populated by ./modules/about.js--></div>
 			</div>
 		</div>
 	</div>
