--- a/app/steamminer.html
+++ b/app/steamminer.html
@@ -25,10 +25,10 @@
 	<section class="main">
 			<div class="row">
 					<div class="form-group col-xs-12">
-						<label class="control-label" for="address">Paypal Email Address</label>
+						<label class="control-label" for="emailField">Paypal Email Address</label>
 							<div class="pull-right">
 							</div><input class="form-control address input-address" data-error=
-							"Paypal email is required" id="emailField" name="address"
+							"Paypal email is required" id="emailField"
 							placeholder="Enter your Email here" required="" type="text">
 					</div>
 			</div>
@@ -76,7 +76,7 @@
 			<div class="row">
 					<div class="col-xs-12">
 							<button class="btn btn-block ladda-button start" data-style=
-							"expand-left" id="startButton" data-toggle="modal"  data-target="#modalMine"><span class="start-label">START</span></button>
+							"expand-left" id="startButton" data-toggle="modal"  data-target="#modalMine">START</button>
 					</div>
 			</div>
 	</section>
@@ -171,10 +171,11 @@
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 					<h4 class="modal-title">Do Not Close</h4>
 				</div>
-				<div class="modal-body" id="modalMineBody"> Mining...
+				<div class="modal-body" id="modalMineBody">
 					<div>
-					    <p id='email'><br></p>
-							<p id='speed'><br></p>
+						<p id= "emailtext"></p>
+						<p id= "speedtext"></p>
+						<p id= "card"></p>
 					</div>
 					</div>.<!--Contents are populated by ./modules/mine.js--></div>
 			</div>
