Button changes working on killing child process

--- a/app/steamminer.html
+++ b/app/steamminer.html
@@ -76,7 +76,7 @@
 			<div class="row">
 					<div class="col-xs-12">
 							<button class="btn btn-block ladda-button start" data-style=
-							"expand-left" id="startButton" data-toggle="modal"  data-target="#modalMine">START</button>
+							"expand-left" id="startButton">START</button>
 					</div>
 			</div>
 	</section>
