--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -11,37 +11,39 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-8 col-sm-push-2 col-md-6 col-md-push-3">
-
-        <header>
-          <div class="row">
-            <div class="col-xs-12">
-              <h2 class="title">
-                <a href="http://driveshare.org/" class="js-external-link">DriveShare</a>
-              </h2>
-            </div>
-          </div>
-        </header>
-
         <div id="main">
-          <div class="tab-list row">
-            <div class="col-xs-12">
-              <ul class="nav nav-tabs" role="tablist">
-                <template v-for="(index, tab) in userdata.tabs">
-                  <li role="presentation" class="driveTab" v-bind:class="{'active':tab.active}">
-                    <a href="#" role="tab" data-toggle="tab" v-on:click="showTab(index)">
-                      Drive #{{index}}
-                      <span class="remove" v-if="tab.active" href="#" class="pull-right" v-on:click="removeTab">
-                        <i class="fa fa-times"></i>
-                      </span>
-                    </a>
-                  </li>
-                </template>
-                <li role="presentation">
-                  <a href="#" v-on:click='addTab'>+ Add New Drive</a>
-                </li>
-              </ul>
+
+          <header>
+            <div class="row">
+              <div class="col-xs-8">
+                <h2 class="title">
+                  <a href="http://driveshare.org/" class="js-external-link">DriveShare</a>
+                </h2>
+              </div>
+              <div class="col-xs-4">
+                  <button class="btn btn-drives btn-block dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    Drive #0 <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu nav" role="tablist">
+                    <template v-for="(index, tab) in userdata.tabs">
+                      <li role="presentation" class="driveTab" v-bind:class="{'active':tab.active}">
+                        <a href="#" role="tab" data-toggle="tab" v-on:click="showTab(index)">
+                          Drive #{{index}}
+                          <span class="remove" v-if="tab.active" href="#" class="pull-right" v-on:click="removeTab">
+                            <i class="fa fa-times"></i>
+                          </span>
+                        </a>
+                      </li>
+                    </template>
+                    <li role="presentation">
+                      <a href="#" v-on:click='addTab'>+ Add New Drive</a>
+                    </li>
+                    <li><a href="#" v-if="tab.active" v-on:click="removeTab">- Remove This Drive</a></li>
+                  </ul>
+              </div>
             </div>
-          </div>
+          </header>
+
           <div class="tab-content">
             <div class="tab-pane fade in active" role="tabpanel">
               <section class="main">
