adjust dropdown left margin, hookup current drive # to selector

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -22,7 +22,7 @@
               </div>
               <div class="col-xs-4">
                   <button class="btn btn-drives btn-block dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                    Drive #0 <span class="caret"></span>
+                    Drive #{{current}} <span class="caret"></span>
                   </button>
                   <ul class="dropdown-menu nav" role="tablist">
                     <template v-for="(index, tab) in userdata.tabs">
