--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -47,7 +47,7 @@
                   </button>
                   <div class="dropdown-menu pull-right" role="tablist">
                     <span>
-                      <input v-on:change="toggleMinToTask" v-model="appSettings.minToTask" type="checkbox"> Minimize to Tray
+                      <input v-model="appSettings.minToTask" type="checkbox"> Minimize to Tray
                     </span>
                   </div>
                 </div>
