--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -88,11 +88,16 @@
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label class="control-label" for="storage">Storage Size</label>
+                    <div class="pull-right fat32-wrapper">
+                      <label class="checkbox-inline">
+                        <input class="fat32-check" type="checkbox" v-model="userdata.tabs[current].storage.tree" v-bind:disabled="userdata.tabs[current]._process"> Drive is formatted FAT32
+                      </label>
+                    </div>
                     <div class="row">
-                      <div class="col-xs-8">
+                      <div class="col-xs-6">
                         <input class="form-control size" min="0" name="storage" v-bind:disabled="userdata.tabs[current]._process" placeholder="Set amount of space to share" type="number", v-model="userdata.tabs[current].storage.size">
                       </div>
-                      <div class="col-xs-4">
+                      <div class="col-xs-6">
                       	<select class="form-control size-unit" v-model="userdata.tabs[current].storage.unit" v-bind:disabled="userdata.tabs[current]._process">
                           <option>MB</option>
                           <option>GB</option>
