OS-specific exec on startup option

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -49,6 +49,9 @@
                     <label>
                       <input v-model="appSettings.minToTask" type="checkbox"> Minimize to Tray
                     </label>
+                    <label>
+                      <input v-model="appSettings.launchOnBoot" type="checkbox"> Launch Driveshare on System Startup
+                    </label>
                   </div>
                 </div>
               </div>
