updating readme and auto-launch text for clarity

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -50,7 +50,7 @@
                       <input v-model="appSettings.minToTask" v-on:change="changeSettings" id="MinToTask" type="checkbox"> Minimize to Tray
                     </label>
                     <label for="LaunchOnBoot">
-                      <input v-model="appSettings.launchOnBoot" v-on:change="changeSettings" id="LaunchOnBoot" type="checkbox"> Launch Driveshare on System Startup
+                      <input v-model="appSettings.launchOnBoot" v-on:change="changeSettings" id="LaunchOnBoot" type="checkbox"> Launch Driveshare on User Login
                     </label>
                   </div>
                 </div>
