--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -14,12 +14,13 @@
         <div id="main">
 
           <header>
-              <div class="pull-left">
+            <div class="row">
+              <div class="col-xs-4">
                 <h2 class="title">
                   <a href="http://driveshare.org/" class="js-external-link">DriveShare</a>
                 </h2>
               </div>
-              <div class="pull-right">
+              <div class="col-xs-8 text-right">
                 <div class="btn-group">
                   <button class="btn btn-drives dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     Drive #{{current}} <span class="caret"></span>
@@ -57,7 +58,8 @@
                     </label>
                   </div>
                 </div>
-              </div>
+              </div>              
+            </div>
           </header>
 
           <div class="tab-content">
