exposing more render process data to system tray, always-on system tray added, fixing userdata serialization issues for ipc

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -47,13 +47,13 @@
                   </button>
                   <div class="dropdown-menu pull-right" role="tablist">
                     <label for="MinToTask">
-                      <input v-model="appSettings.minToTask" v-on:change="changeSettings" id="MinToTask" type="checkbox"> Minimize to Tray
+                      <input v-model="userdata.appSettings.minToTask" v-on:change="changeSettings" id="MinToTask" type="checkbox"> Display in System Tray
                     </label>
                     <label for="LaunchOnBoot">
-                      <input v-model="appSettings.launchOnBoot" v-on:change="changeSettings" id="LaunchOnBoot" type="checkbox"> Launch Driveshare at User Login
+                      <input v-model="userdata.appSettings.launchOnBoot" v-on:change="changeSettings" id="LaunchOnBoot" type="checkbox"> Launch Driveshare at User Login
                     </label>
                     <label for="RunDrivesOnBoot">
-                      <input v-model="appSettings.runDrivesOnBoot" v-on:change="changeSettings" id="RunDrivesOnBoot" type="checkbox"> Share Previously Running Drives at Launch
+                      <input v-model="userdata.appSettings.runDrivesOnBoot" v-on:change="changeSettings" id="RunDrivesOnBoot" type="checkbox"> Share Previously Running Drives at Launch
                     </label>
                   </div>
                 </div>
