--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>DriveShare</title>
+<title>StorjFarmer</title>
 <head>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/fonts.css" rel="stylesheet">
@@ -17,7 +17,7 @@
             <div class="row">
               <div class="col-xs-4">
                 <h2 class="title">
-                  <a href="http://driveshare.org/" class="js-external-link">DriveShare</a>
+                  <a href="http://driveshare.org/" class="js-external-link">StorjFarmer</a>
                 </h2>
               </div>
               <div class="col-xs-8 text-right">
