* Dismissing telemetry warning is now permanent * Fix config default for telemetry reports from old config * Fix overlapping telemtry notification

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -68,7 +68,7 @@
           <div class="tab-content">
             <div v-if="userdata.appSettings.reportTelemetry && !telemetryWarningDismissed" id="telemetry-info">
               <p>
-                You are sharing telemetry data with Storj to improve the network.
+                Sharing telemetry data to improve the network.
                 This can be disabled in settings. <span class="dismiss" v-on:click="dismissTelemetryWarning">Dismiss?</span>
               </p>
             </div>
