replace driveshare.org link with storj.io

--- a/app/storjfarmer.html
+++ b/app/storjfarmer.html
@@ -17,7 +17,7 @@
             <div class="row">
               <div class="col-xs-4">
                 <h2 class="title">
-                  <a href="http://driveshare.org/" class="js-external-link">StorjFarmer</a>
+                  <a href="https://storj.io/" class="js-external-link">StorjFarmer</a>
                 </h2>
               </div>
               <div class="col-xs-8 text-right">
