--- a/app/storjfarmer.html
+++ b/app/storjfarmer.html
@@ -16,9 +16,7 @@
           <header>
             <div class="row">
               <div class="col-xs-4">
-                <h2 class="title">
-                  <a href="https://storj.io/share.html" class="js-external-link">Storj Share</a>
-                </h2>
+                <a href="https://storj.io/share.html" class="js-external-link logo"><img src="imgs/logo.png" alt="" class="logo-image"></a>
               </div>
               <div class="col-xs-8 text-right">
                 <div class="btn-group">
