--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="pull-right">
                       <span class="amount">
-                        <p>Balance: {{balance.sjcx}} SJCX, {{balance.sjct}} SJCT</p>
+                        <p>Balance: {{balance.sjcx}} SJCX<span v-if="balance.sjct">, {{balance.sjct}} SJCT</span></p>
                       </span>
                     </div>
                   </div>
@@ -95,7 +95,7 @@
                       <div class="pull-right">
                         <span class="amount">
                           <a v-if="!balance.qualified" class="js-external-link" href="https://counterwallet.io/">Create New Address</a>
-                          <p v-if="balance.qualified">Balance: {{balance.sjcx}} SJCX, {{balance.sjct}} SJCT</p>
+                          <p v-if="balance.qualified">Balance: {{balance.sjcx}} SJCX<span v-if="balance.sjct">, {{balance.sjct}} SJCT</span></p>
                         </span>
                       </div>
                       <input class="form-control address input-address" v-on:change="getBalance" v-bind:disabled="userdata.tabs[current].farmer" data-error="Payout address is required" id="address" name="address" placeholder="Enter your SJCX Address" required="" type="text", v-model="userdata.tabs[current].address">
