fix version display

--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -199,9 +199,11 @@
           <h4 class="modal-title">About Storj Share</h4>
         </div>
         <div class="modal-body">
-          Storj Share Version {{version}}
+          Storj Share {{version}}
           <br/>
-          Protocol Version {{protocol}}
+          Core Library {{core}}
+          <br/>
+          Protocol {{protocol}}
         </div>
       </div>
     </div>
