Change Slack link

--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -158,10 +158,10 @@
         <footer id="footer">
           <div class="row">
             <div class="col-xs-6 text-left">
-              <p><a href="http://storj.io/" class="js-external-link">Powered by Storj</a></p>
+              <p><a href="https://storj.io/" class="js-external-link">Powered by Storj</a></p>
             </div>
             <div class="col-xs-6 text-right">
-              <p><a href="http://slack.storj.io/" class="js-external-link">Need Help?</a></p>
+              <p><a href="https://storj.io/community.html" class="js-external-link">Need Help?</a></p>
             </div>
           </div>
         </footer>
