Logo now opens link in external window

--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -16,7 +16,7 @@
           <header>
             <div class="row">
               <div class="col-xs-4">
-                <a href="https://storj.io/share.html" class="js-external-link logo"><img src="imgs/logo.png" alt="" class="logo-image"></a>
+                <a class="logo" href="#" onclick="require('shell').openExternal('https://storj.io/share.html');" ><img src="imgs/logo.png" alt="" class="logo-image" ></a>
               </div>
               <div class="col-xs-8 text-right">
                 <div class="btn-group">
